<resources>
    <string name="app_name">动次打次</string>
    <string name="result_network_error">网络不给力，请检查网络</string>
    <string name="result_server_error">服务器连接失败，请稍后再试</string>
    <string name="result_server_timeout">服务器连接超时，请稍后再试</string>
    <string name="result_empty_error">系统繁忙，请稍后再试</string>
    <string name="data_parsing_error">数据解析出错</string>
    <string name="tv_title">Hello Music</string>
    <string name="btn_login">登陆</string>
    <string name="tv_phone">请输入手机号</string>
    <string name="tv_pwd">请输入密码</string>
    <string name="tv_code">请输入验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="send">发送</string>
    <string name="use_code">使用验证码登陆 > </string>
    <string name="use_pwd">使用账号密码登陆 > </string>
    <string name="register_account">注册账号</string>
    <string name="tv_username">请输入用户名</string>
    <string name="tv_pwd_again">请再次输入登录密码</string>
    <string name="tv_set_pwd">设置6至20位登录密码</string>
    <string name="btn_register">注册</string>
    <string name="to_login">已有账号，立即登陆</string>
    <string name="homepage">首页</string>
    <string name="community">社区</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="id">ID: </string>
    <string name="focus_on">关注</string>
    <string name="un_focus_on">取消关注</string>
    <string name="fans">粉丝</string>
    <string name="friends">好友</string>
    <string name="live_house_order">演出订单</string>
    <string name="surrounding_order">周边订单</string>
    <string name="payment_code">支付码</string>
    <string name="opinion">意见反馈</string>
    <string name="collection">收藏</string>
    <string name="gift">演出周边</string>
    <string name="more">更多 ></string>
    <string name="msg">演出信息</string>
    <string name="show_location">演出地点</string>
    <string name="buy">购买</string>
    <string name="show_time">演出时间</string>
    <string name="show_order">演出顺序</string>
    <string name="buy_know">购票须知</string>
    <string name="instructions">退换票说明</string>
    <string name="entrance">入场方式</string>
    <string name="viewing">观影方式</string>
    <string name="setting">设置</string>
    <string name="chat">聊天</string>
    <string name="official">官方</string>
    <string name="account">账号</string>
    <string name="show">演出</string>
    <string name="change">修改个人信息</string>
    <string name="safe">账号安全</string>
    <string name="privacy">隐私设置</string>
    <string name="address">收货地址</string>
    <string name="people">常用观影人</string>
    <string name="style">喜欢风格：</string>
    <string name="latest">最新</string>
    <string name="recommend">推荐</string>
    <string name="focus_on_add">+ 关注</string>
    <string name="post">发表</string>
    <string name="cancel">取消</string>
    <string name="camera">照片 / 视频</string>
    <string name="tag">添加标签</string>
    <string name="location">添加地点</string>
    <string name="open">公开</string>
    <string name="around">周边</string>
    <string name="drama_opera">话剧歌剧</string>
    <string name="crosstalk">相声</string>
    <string name="modern_vocal">现代曲艺</string>
    <string name="talk_show">脱口秀</string>
    <string name="collect">收藏演出</string>
</resources>