<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".module.login.PwdLoginActivity">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title"
            android:textSize="40sp"
            android:textColor="@color/main_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.07"
            app:layout_constraintHeight_percent="0.07"
            android:layout_marginLeft="4dp"
            android:src="@drawable/phone"
            app:layout_constraintBottom_toBottomOf="@+id/et_phone"
            app:layout_constraintStart_toStartOf="@+id/et_phone"
            app:layout_constraintTop_toTopOf="@+id/et_phone"
            />


        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.7"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="40dp"
            android:hint="@string/tv_phone"
            android:background="@drawable/et_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <ImageView
            android:id="@+id/iv_code"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.055"
            app:layout_constraintHeight_percent="0.055"
            android:layout_marginLeft="6dp"
            android:src="@drawable/message_pink"
            app:layout_constraintBottom_toBottomOf="@+id/et_code"
            app:layout_constraintStart_toStartOf="@+id/et_code"
            app:layout_constraintTop_toTopOf="@+id/et_code"/>

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.7"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/tv_code"
            android:background="@drawable/et_style"
            android:paddingLeft="40dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="@+id/et_phone"
            app:layout_constraintStart_toStartOf="@+id/et_phone"
            app:layout_constraintTop_toBottomOf="@+id/et_phone" />

        <TextView
            android:id="@+id/tv_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_code"
            android:textColor="@color/blue"
            android:letterSpacing="0.05"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="@+id/et_code"
            app:layout_constraintTop_toTopOf="@+id/et_code"
            app:layout_constraintBottom_toBottomOf="@id/et_code"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textColor="@color/send_code_blue"
            android:letterSpacing="0.05"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/et_code"
            app:layout_constraintEnd_toEndOf="@+id/et_code"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.7"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:letterSpacing="0.4"
            android:background="@drawable/btn_login_style"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/tv_use_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_pwd"
            android:letterSpacing="0.1"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.31" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.57" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>