<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".module.register.RegisterActivity">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title"
            android:textColor="@color/main_color"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <ImageView
            android:id="@+id/iv_username"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="4dp"
            android:src="@drawable/people"
            app:layout_constraintBottom_toBottomOf="@+id/et_username"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="@+id/et_username"
            app:layout_constraintTop_toTopOf="@+id/et_username"
            app:layout_constraintWidth_percent="0.07" />


        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_style"
            android:ems="10"
            android:hint="@string/tv_username"
            android:inputType="textPersonName"
            android:paddingLeft="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintWidth_percent="0.7" />

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="4dp"
            android:src="@drawable/phone"
            app:layout_constraintBottom_toBottomOf="@+id/et_phone"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="@+id/et_phone"
            app:layout_constraintTop_toTopOf="@+id/et_phone"
            app:layout_constraintWidth_percent="0.07" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/et_style"
            android:ems="10"
            android:hint="@string/tv_phone"
            android:inputType="number"
            android:paddingLeft="40dp"
            app:layout_constraintEnd_toEndOf="@+id/et_username"
            app:layout_constraintStart_toStartOf="@+id/et_username"
            app:layout_constraintTop_toBottomOf="@+id/et_username"
            app:layout_constraintWidth_percent="0.7" />


        <ImageView
            android:id="@+id/iv_code"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="7dp"
            android:src="@drawable/message_pink"
            app:layout_constraintBottom_toBottomOf="@+id/et_code"
            app:layout_constraintHeight_percent="0.055"
            app:layout_constraintStart_toStartOf="@+id/et_code"
            app:layout_constraintTop_toTopOf="@+id/et_code"
            app:layout_constraintWidth_percent="0.055" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/et_style"
            android:ems="10"
            android:hint="@string/tv_code"
            android:inputType="number"
            android:paddingLeft="40dp"
            app:layout_constraintEnd_toEndOf="@+id/et_phone"
            app:layout_constraintStart_toStartOf="@+id/et_phone"
            app:layout_constraintTop_toBottomOf="@+id/et_phone"
            app:layout_constraintWidth_percent="0.7" />

        <TextView
            android:id="@+id/tv_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_code"
            android:textColor="@color/blue"
            android:letterSpacing="0.05"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="@+id/et_code"
            app:layout_constraintTop_toTopOf="@+id/et_code"
            app:layout_constraintBottom_toBottomOf="@id/et_code" />


        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="4dp"
            android:src="@drawable/password"
            app:layout_constraintBottom_toBottomOf="@+id/et_pwd"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="@+id/et_pwd"
            app:layout_constraintTop_toTopOf="@+id/et_pwd"
            app:layout_constraintWidth_percent="0.07" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/et_style"
            android:ems="10"
            android:hint="@string/tv_set_pwd"
            android:inputType="textPassword"
            android:paddingLeft="40dp"
            app:layout_constraintEnd_toEndOf="@+id/et_code"
            app:layout_constraintStart_toStartOf="@+id/et_code"
            app:layout_constraintTop_toBottomOf="@+id/et_code"
            app:layout_constraintWidth_percent="0.7" />

        <ImageView
            android:id="@+id/iv_pwd_again"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="4dp"
            android:src="@drawable/password"
            app:layout_constraintBottom_toBottomOf="@+id/et_pwd_again"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="@+id/et_pwd_again"
            app:layout_constraintTop_toTopOf="@+id/et_pwd_again"
            app:layout_constraintWidth_percent="0.07" />

        <EditText
            android:id="@+id/et_pwd_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/et_style"
            android:ems="10"
            android:hint="@string/tv_pwd_again"
            android:inputType="textPassword"
            android:paddingLeft="40dp"
            app:layout_constraintEnd_toEndOf="@+id/et_pwd"
            app:layout_constraintStart_toStartOf="@+id/et_pwd"
            app:layout_constraintTop_toBottomOf="@+id/et_pwd"
            app:layout_constraintWidth_percent="0.7" />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login_style"
            android:letterSpacing="0.4"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintWidth_percent="0.7" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.1"
            android:text="@string/to_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.76" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>