<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".module.setting.SettingActivity"
        android:background="#f0f0f0">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintHeight_percent="0.41"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"/>

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/right"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="6dp"
                app:layout_constraintWidth_percent="0.1"
                app:layout_constraintHeight_percent="0.04"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@id/tv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_back"
                app:layout_constraintBottom_toBottomOf="@id/iv_back"
                />


        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/guideline1"
            />

        <ImageView
            android:id="@+id/iv_change"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/change"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintWidth_percent="0.06"
            app:layout_constraintTop_toTopOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline2"/>

        <TextView
            android:id="@+id/tv_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toRightOf="@id/iv_change"
            app:layout_constraintTop_toTopOf="@id/iv_change"
            app:layout_constraintBottom_toBottomOf="@id/iv_change"
            />

        <ImageView
            android:id="@+id/iv_safe"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/protection"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintWidth_percent="0.06"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/iv_change"
            app:layout_constraintStart_toStartOf="@id/guideline2"/>

        <TextView
            android:id="@+id/tv_safe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safe"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toRightOf="@id/iv_safe"
            app:layout_constraintTop_toTopOf="@id/iv_safe"
            app:layout_constraintBottom_toBottomOf="@id/iv_safe"
            />

        <ImageView
            android:id="@+id/iv_privacy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/setting1"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintWidth_percent="0.06"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/iv_safe"
            app:layout_constraintStart_toStartOf="@id/guideline2"/>

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toRightOf="@id/iv_privacy"
            app:layout_constraintTop_toTopOf="@id/iv_privacy"
            app:layout_constraintBottom_toBottomOf="@id/iv_privacy"
            />

        <ImageView
            android:id="@+id/iv_background2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintHeight_percent="0.28"
            app:layout_constraintTop_toTopOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@id/guideline2"/>


        <TextView
            android:id="@+id/tv_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/guideline5"
            />

        <ImageView
            android:id="@+id/iv_address"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/location_black"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintWidth_percent="0.06"
            app:layout_constraintTop_toTopOf="@id/guideline6"
            app:layout_constraintStart_toStartOf="@id/guideline2"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toRightOf="@id/iv_address"
            app:layout_constraintTop_toTopOf="@id/iv_address"
            app:layout_constraintBottom_toBottomOf="@id/iv_address"
            />

        <ImageView
            android:id="@+id/iv_people"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/watcher"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintWidth_percent="0.06"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/iv_address"
            app:layout_constraintStart_toStartOf="@id/guideline2"/>

        <TextView
            android:id="@+id/tv_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toRightOf="@id/iv_people"
            app:layout_constraintTop_toTopOf="@id/iv_people"
            app:layout_constraintBottom_toBottomOf="@id/iv_people"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.43"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.46"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.53"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>